# upstream

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/file/: mod.rs  route.rs
src/ip/: mod.rs  route.rs
src/stream/: route.rs
upstream-app/: README.md  pubspec.yaml
upstream-app/android/app/: build.gradle
upstream-app/android/app/src/main/: AndroidManifest.xml
upstream-app/ios/Runner/: Info.plist
upstream-app/ios/Runner.xcodeproj/: project.pbxproj
upstream-app/lib/: main.dart
upstream-app/lib/core/: core_locator.dart
upstream-app/lib/core/filex/: file_x_utility.dart
upstream-app/lib/core/percent/: percent_utility.dart
upstream-app/lib/di/: service_locator.dart
upstream-app/lib/features/home/: home_page.dart
upstream-app/lib/features/scanner/: scanner_page.dart
upstream-app/lib/scanner/: scanner_page.dart
upstream-app/lib/scanner/widgets/: scanner_flashlight_button.dart  scanner_label.dart  scanner_switch_camera_button.dart
upstream-app/linux/: CMakeLists.txt  my_application.cc
upstream-app/macos/Runner.xcodeproj/: project.pbxproj
upstream-app/macos/Runner/Configs/: AppInfo.xcconfig
upstream-app/test/: widget_test.dart
upstream-app/windows/runner/: Runner.rc
upstream-host/: Cargo.toml  Makefile
upstream-host/src-tauri/: Cargo.toml  tauri.conf.json
upstream-host/src-tauri/src/: main.rs
upstream-server/: Cargo.toml  Makefile
upstream-server/src/: main.rs
upstream-server/src/file/: mod.rs  route.rs
upstream-server/src/ip/: mod.rs
upstream-server/src/stream/: route.rs
web/: files.html  index.html
(+3 files in other folders)
